[gd_scene load_steps=13 format=3 uid="uid://cstafv1o6ka5b"]

[ext_resource type="Texture2D" uid="uid://bfknagnvvpfux" path="res://assets/heart.png" id="1_nt7q6"]
[ext_resource type="Script" uid="uid://bxhoy0h1s7cj0" path="res://scenes/lives.gd" id="1_x4jx1"]
[ext_resource type="Script" uid="uid://nxkaiw3ysqs2" path="res://scenes/leaderboard.gd" id="3_cgfq5"]
[ext_resource type="Script" uid="uid://72cied8e71h" path="res://scenes/game_over.gd" id="3_yev5y"]
[ext_resource type="Shader" uid="uid://b3dxiw01bkyjx" path="res://blur_shader.gdshader" id="4_gdt2y"]
[ext_resource type="AudioStream" uid="uid://wn08ojbb3gno" path="res://music/Win.mp3" id="5_vdcm2"]
[ext_resource type="Script" uid="uid://bfor8dr7qdjv7" path="res://scenes/main_menu.gd" id="5_wm3ai"]
[ext_resource type="AudioStream" uid="uid://4k3d3y0qc5o2" path="res://music/Lose.mp3" id="6_6rmj2"]
[ext_resource type="Texture2D" uid="uid://cwkfrwrrnl6q7" path="res://assets/tut3.png" id="6_ktti3"]
[ext_resource type="Texture2D" uid="uid://kcm7skigb5wm" path="res://assets/tut2.png" id="7_cgfq5"]
[ext_resource type="Texture2D" uid="uid://jfwhxuhy73a5" path="res://assets/tut1.png" id="8_7dvkv"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wm3ai"]
shader = ExtResource("4_gdt2y")
shader_parameter/lod = 2.026000096235

[node name="ui" type="CanvasLayer"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="35pxmargin" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 35
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 35
theme_override_constants/margin_bottom = 35

[node name="VBoxContainer" type="VBoxContainer" parent="Control/35pxmargin"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="work_hour" type="Label" parent="Control/35pxmargin/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 48
text = "9AM"

[node name="status" type="Label" parent="Control/35pxmargin/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 20
text = "Still 8 more hours..."

[node name="rush_hour" type="Label" parent="Control/35pxmargin/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 0.26999998, 0.26999998, 1)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 48
text = "RUSH HOUR IN 80 SECONDS..."

[node name="leaderboard" type="VBoxContainer" parent="Control/35pxmargin"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
script = ExtResource("3_cgfq5")

[node name="temp" type="Label" parent="Control/35pxmargin/leaderboard"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Player 1 score: 0"

[node name="mid_top" type="VBoxContainer" parent="Control/35pxmargin"]
layout_mode = 2
size_flags_vertical = 0

[node name="lives" type="HBoxContainer" parent="Control/35pxmargin/mid_top"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
script = ExtResource("1_x4jx1")

[node name="temp" type="TextureRect" parent="Control/35pxmargin/mid_top/lives"]
layout_mode = 2
texture = ExtResource("1_nt7q6")

[node name="food_critics" type="Label" parent="Control/35pxmargin/mid_top"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 0.47000003, 0.47000003, 1)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 48
text = "FOOD CRITICS IN 60 SECONDS..."

[node name="game_over" type="ColorRect" parent="Control" node_paths=PackedStringArray("win", "work_hour_label", "work_hour_status_label", "rush_hour_label", "food_critics", "game_over_desc", "win_desc")]
process_mode = 3
modulate = Color(1, 1, 1, 0)
z_index = 98
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
script = ExtResource("3_yev5y")
win = NodePath("../win")
work_hour_label = NodePath("../35pxmargin/VBoxContainer/work_hour")
work_hour_status_label = NodePath("../35pxmargin/VBoxContainer/status")
rush_hour_label = NodePath("../35pxmargin/VBoxContainer/rush_hour")
food_critics = NodePath("../35pxmargin/mid_top/food_critics")
game_over_desc = NodePath("VBoxContainer/title2")
win_desc = NodePath("../win/VBoxContainer/title2")
win_sound = ExtResource("5_vdcm2")
lose_sound = ExtResource("6_6rmj2")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/game_over"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -106.0
offset_bottom = 106.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="title" type="Label" parent="Control/game_over/VBoxContainer"]
modulate = Color(1, 0.47000003, 0.47000003, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "you're fired..."
horizontal_alignment = 1

[node name="title2" type="RichTextLabel" parent="Control/game_over/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "cant even put food on the table! Although [color=red]P2[/color] did try their best with [color=red]201 Points[/color]..."
fit_content = true
horizontal_alignment = 1

[node name="restart" type="Label" parent="Control/game_over/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "R to Restart"
horizontal_alignment = 1

[node name="win" type="ColorRect" parent="Control"]
process_mode = 3
modulate = Color(1, 1, 1, 0)
z_index = 98
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="Control/win"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -73.0
offset_bottom = 73.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="title" type="Label" parent="Control/win/VBoxContainer"]
modulate = Color(0.88633335, 1, 0.38, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "win!!"
horizontal_alignment = 1

[node name="title2" type="RichTextLabel" parent="Control/win/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "survived a day thanks to [color=blue]P1[/color] who scored [color=blue]151 Points[/color]"
fit_content = true
horizontal_alignment = 1

[node name="restart" type="Label" parent="Control/win/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "R to Restart"
horizontal_alignment = 1

[node name="main_menu" type="ColorRect" parent="Control"]
process_mode = 3
visible = false
self_modulate = Color(1, 1, 1, 0.3137255)
z_index = 98
material = SubResource("ShaderMaterial_wm3ai")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
script = ExtResource("5_wm3ai")
show_main_menu = false

[node name="tutorial" type="ColorRect" parent="Control/main_menu"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.53333336)

[node name="tutorial" type="VBoxContainer" parent="Control/main_menu/tutorial"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -457.5
offset_top = -187.0
offset_right = 457.5
offset_bottom = 187.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="panels" type="HBoxContainer" parent="Control/main_menu/tutorial/tutorial"]
layout_mode = 2

[node name="panel1" type="TextureRect" parent="Control/main_menu/tutorial/tutorial/panels"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
texture = ExtResource("6_ktti3")

[node name="Label" type="Label" parent="Control/main_menu/tutorial/tutorial/panels/panel1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 32
text = "Deliver food to the right tables!"
autowrap_mode = 2

[node name="panel2" type="TextureRect" parent="Control/main_menu/tutorial/tutorial/panels"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
texture = ExtResource("7_cgfq5")

[node name="Label" type="Label" parent="Control/main_menu/tutorial/tutorial/panels/panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 32
text = "Deliver them quickly, or customers get mad!"
autowrap_mode = 2

[node name="panel3" type="TextureRect" parent="Control/main_menu/tutorial/tutorial/panels"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
texture = ExtResource("8_7dvkv")

[node name="Label" type="Label" parent="Control/main_menu/tutorial/tutorial/panels/panel3"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -101.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 32
text = "Dont get fired before 5PM! (Survive)"
autowrap_mode = 2

[node name="Label" type="Label" parent="Control/main_menu/tutorial/tutorial"]
layout_mode = 2
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 48
text = "Enter to START"
horizontal_alignment = 1

[node name="menu" type="VBoxContainer" parent="Control/main_menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="title" type="Label" parent="Control/main_menu/menu"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 25
theme_override_font_sizes/font_size = 72
text = "Overserved"
horizontal_alignment = 1

[node name="restart" type="Label" parent="Control/main_menu/menu"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 25
theme_override_font_sizes/font_size = 32
text = "Enter to start"
horizontal_alignment = 1
